# RendererDemo

./: .clang-format  .clangd  .editorconfig  .gitignore  Application.cpp  Application.h  Application.hpp  CMakeLists.txt  Log.cpp  Log.hpp  README.md  Renderer.hpp  Window.cpp  Window.hpp  doc.md  main.cpp  vcpkg.json
Engine/Shaders/GLSL/: base.frag  base.vert  mesh.frag  mesh.vert  triangle.frag  triangle.vert
Engine/Source/: EntryPoint.cpp
Engine/Source/Editor/: Editor.cpp  Editor.hpp  EditorContext.cpp  EditorContext.hpp  EditorDraw.cpp  EditorDraw.hpp  EditorEvent.cpp  EditorEvent.hpp  EditorUI.cpp  EditorUI.hpp
Engine/Source/Editor/Source/: DefaultWorld.hpp  DemoApp.cpp
Engine/Source/Editor/UI/: AssetPanel.cpp  AssetPanel.hpp  EditorUI.cpp  EditorUI.hpp  LogPanel.cpp  LogPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  Utils.hpp
Engine/Source/Runtime/: Engine.cpp  Engine.hpp  RuntimeContext.cpp  RuntimeContext.hpp
Engine/Source/Runtime/Core/: Application.cpp  Application.hpp  Delegate.hpp  EntryPoint.cpp  IRenderer.hpp  IWorld.hpp  Log.cpp  TransactionHandler.hpp  TransactionType.hpp
Engine/Source/Test/: ImGuiTest.cpp
demo/src/: DefaultWorld.hpp  DemoApp.cpp
engine/src/Misaka/: Application.cpp  Application.hpp  Log.cpp  Renderer.hpp  Window.cpp  main.cpp
engine/src/Misaka/Core/: Application.cpp  Application.hpp  Delegate.hpp  Entity.cpp  Entity.hpp  EntryPoint.cpp  IWindow.hpp  IWorld.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  TransactionHandler.hpp  Window.cpp  Window.hpp  main.cpp
engine/src/Misaka/Event/: Event.hpp  TransactionHandler.hpp  TransactionType.hpp
engine/src/Misaka/Renderer/: Renderer.cpp  Renderer.hpp  Shader.hpp  Texture.hpp
engine/src/Misaka/Utils/: Log.cpp  TransactionHandler.hpp
engine/src/platform/: OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp
shaders/: 007_rectleShape.frag  008_polygonShape.frag  009_translate.frag  010_sin_cos_u_time.frag  011_scale.frag  012_rotate.frag  013_warpGrid.frag  014_waterColor.frag  015_waterColor2.frag  016_warpLines.frag  017_waveDrawLines.frag  018_rainbowSwirl.frag  019_scanningLines.frag  020_movingLight.frag  021_circleOfLights.frag  022_morphingGridBoxes.frag  023_morephGrid.frag  024_circleColorPulse.frag  025_noise1d.frag  026_image.frag  027_imageColor.frag  028_imageMainpulate.frag  029_imageColorMix.frag  030_whiteNoise.frag  031_mouse.frag  032_scanImage.frag  033_noiseImage.frag  test.frag
(+120 files in other folders)
